--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -89,4 +89,5 @@
                                                                     <rect key="frame" x="84.5" y="0.0" width="76" height="14"/>
                                                                     <subviews>
                                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Down Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="ktC-1y-ku5">
-                                                    
+                                                                            <rect key="frame" x="0.0" y="0.0" width="9" height="14"/>
+       
