--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -99,4 +99,5 @@
                                                                             <rect key="frame" x="13" y="0.0" width="63" height="14"/>
                                                                             <attributedString key="attributedText">
                                                                                 <fragment content="000.00">
-                                 
+                                                                                    <attributes>
+              
