--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -104,4 +104,5 @@
                                                                                     </attributes>
                                                                                 </fragment>
                                                                             </attributedString>
-                                        
+                                                                            <nil key="highlightedColor"/>
+                                  
